{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 15,
  "lineage": "807e9bec-d050-b448-8263-ce8116240041",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:469056280854:internet-gateway/igw-0ee0f54fb2c66552e",
            "id": "igw-0ee0f54fb2c66552e",
            "owner_id": "469056280854",
            "tags": {
              "Name": "yg_igw"
            },
            "tags_all": {
              "Name": "yg_igw"
            },
            "vpc_id": "vpc-0ad405ba0192d8602"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ee0f54fb2c66552e",
            "id": "r-rtb-096437c0dd1ef866f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-096437c0dd1ef866f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myIGW",
            "aws_route_table.public_route_table",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:469056280854:route-table/rtb-047b64b8d597c8c93",
            "id": "rtb-047b64b8d597c8c93",
            "owner_id": "469056280854",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yg_database_route_table"
            },
            "tags_all": {
              "Name": "yg_database_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad405ba0192d8602"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:469056280854:route-table/rtb-096437c0dd1ef866f",
            "id": "rtb-096437c0dd1ef866f",
            "owner_id": "469056280854",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "yg_public_route_table"
            },
            "tags_all": {
              "Name": "yg_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad405ba0192d8602"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcbcc673c026a598",
            "route_table_id": "rtb-047b64b8d597c8c93",
            "subnet_id": "subnet-09f6e7fda4368f46d"
          },
          "dependencies": [
            "aws_route_table.database_route_table",
            "aws_subnet.database_subnet_1",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d6db2c729fdbfa3",
            "route_table_id": "rtb-047b64b8d597c8c93",
            "subnet_id": "subnet-08abc8e758af201ea"
          },
          "dependencies": [
            "aws_route_table.database_route_table",
            "aws_subnet.database_subnet_2",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e26bbdb22b8025b2",
            "route_table_id": "rtb-096437c0dd1ef866f",
            "subnet_id": "subnet-04c4b63c8c54da1d5"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091fa7060f8096838",
            "route_table_id": "rtb-096437c0dd1ef866f",
            "subnet_id": "subnet-039bb5ba5ab809f84"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:469056280854:security-group/sg-0a6b9acda2564abdc",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6b9acda2564abdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "yg_security_group",
            "name_prefix": "",
            "owner_id": "469056280854",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yg_security_group"
            },
            "tags_all": {
              "Name": "yg_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad405ba0192d8602"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:469056280854:subnet/subnet-09f6e7fda4368f46d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f6e7fda4368f46d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "469056280854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yg_database_subnet_availability_zone_1a"
            },
            "tags_all": {
              "Name": "yg_database_subnet_availability_zone_1a"
            },
            "vpc_id": "vpc-0ad405ba0192d8602"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:469056280854:subnet/subnet-08abc8e758af201ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08abc8e758af201ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "469056280854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yg_database_subnet_availability_zone_1b"
            },
            "tags_all": {
              "Name": "yg_database_subnet_availability_zone_1b"
            },
            "vpc_id": "vpc-0ad405ba0192d8602"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:469056280854:subnet/subnet-04c4b63c8c54da1d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c4b63c8c54da1d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "469056280854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yg_public_subnet_availability_zone_1a"
            },
            "tags_all": {
              "Name": "yg_public_subnet_availability_zone_1a"
            },
            "vpc_id": "vpc-0ad405ba0192d8602"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:469056280854:subnet/subnet-039bb5ba5ab809f84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039bb5ba5ab809f84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "469056280854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "yg_public_subnet_availability_zone_1b"
            },
            "tags_all": {
              "Name": "yg_public_subnet_availability_zone_1b"
            },
            "vpc_id": "vpc-0ad405ba0192d8602"
          },
          "dependencies": [
            "aws_vpc.myVPC",
            "data.aws_availability_zones.available_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:469056280854:vpc/vpc-0ad405ba0192d8602",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0449669bd85cb94d2",
            "default_route_table_id": "rtb-09b7ae133494258de",
            "default_security_group_id": "sg-0d8414691a2cbc46c",
            "dhcp_options_id": "dopt-01cea07f6c276632b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad405ba0192d8602",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09b7ae133494258de",
            "owner_id": "469056280854",
            "tags": {
              "Name": "yg_vpc"
            },
            "tags_all": {
              "Name": "yg_vpc"
            }
          }
        }
      ]
    }
  ]
}